# framely

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SPRINT.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/framely-app/: Cargo.toml
crates/framely-app/src/: demo_image.rs  main.rs  overlay.rs  preview.rs  system_integration.rs
crates/framely-capture/: Cargo.toml
crates/framely-capture/examples/: capture_display.rs
crates/framely-capture/src/: lib.rs
crates/framely-core/: Cargo.toml
crates/framely-core/src/: lib.rs
crates/framely-io/: Cargo.toml
crates/framely-io/examples/: clipboard_roundtrip.rs
crates/framely-io/src/: lib.rs
crates/framely-presets/: Cargo.toml
crates/framely-presets/src/: lib.rs
crates/framely-render/: Cargo.toml
crates/framely-render/examples/: generate_icon.rs
crates/framely-render/src/: lib.rs
packaging/: AppIcon.icns  Info.plist  build-dmg.sh  entitlements.plist
