[workspace]
resolver = "2"
members = [
    "crates/framely-app",
    "crates/framely-core",
    "crates/framely-render",
    "crates/framely-capture",
    "crates/framely-io",
    "crates/framely-presets",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Framely"]

[workspace.dependencies]
framely-core = { path = "crates/framely-core" }
framely-render = { path = "crates/framely-render" }
framely-capture = { path = "crates/framely-capture" }
framely-io = { path = "crates/framely-io" }
framely-presets = { path = "crates/framely-presets" }
eframe = "0.29"
egui = "0.29"
tiny-skia = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
