[package]
name = "framely-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "framely"
path = "src/main.rs"

[dependencies]
framely-core.workspace = true
framely-render.workspace = true
framely-capture.workspace = true
framely-io.workspace = true
framely-presets.workspace = true
eframe.workspace = true
egui.workspace = true
global-hotkey = "0.8.0"
tray-icon = "0.24.1"
rfd = "0.17.2"
